@@ -2,10 +2,13 @@
 
 = 3.0.0 =
 * WordPress 6.5 compatible.
+* The Grand Refactoring, Episode I.
 * Fixed error that could occur in certain processing flows when wp_get_current_user() is not yet defined.
 * Introduces own current user capability check class methods in Groups_User class for coherency.
 * Replaced uses of the obsolete var keyword to declare class properties.
 * Added several instances of missing code documentation.
+* Revised needed code doc formatting.
+* Replaced uses of the extract function with specific parameter handling.
 
 = 2.20.1 =
 * WordPress 6.4 compatible.
